--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.6;
             color: #333;
-            background-color: #f6f8fa;
+            background: url('backdrop.png');
             padding: 20px;
         }
 
