--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: url('backdrop.png');
+            background: url('https://raw.githubusercontent.com/ralphsmits/testing3oct/refs/heads/main/backdrop.png');
             padding: 20px;
         }
 
