--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             line-height: 1.6;
             color: #333;
             background: url('https://raw.githubusercontent.com/ralphsmits/testing3oct/refs/heads/main/backdrop.png');
+            background-size: cover;
             padding: 20px;
         }
 
