--- a/index.html
+++ b/index.html
@@ -15,35 +15,38 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       line-height: 1.6;
       color: #fff;
-      background: 
+      background:
         linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
         url('https://raw.githubusercontent.com/ralphsmits/testing3oct/refs/heads/main/backdrop.png')
         center center / cover no-repeat fixed;
-      padding: 20px;
+      padding: 40px 20px;
       min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .logo-container {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .logo {
+      max-width: 500px;
+      width: 80%;
+      height: auto;
+      display: inline-block;
+      filter: drop-shadow(0 6px 12px rgba(0,0,0,0.7));
     }
 
     .container {
+      width: 100%;
       max-width: 600px;
-      margin: 0 auto;
       background: rgba(20, 20, 20, 0.9);
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.5);
       backdrop-filter: blur(8px);
-    }
-
-    .logo-container {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    .logo {
-      max-width: 400px; /* larger logo */
-      width: 80%;
-      height: auto;
-      display: inline-block;
-      filter: drop-shadow(0 4px 8px rgba(0,0,0,0.6));
     }
 
     label {
@@ -119,11 +122,14 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="logo-container">
-      <img src="https://raw.githubusercontent.com/ralphsmits/testing3oct/refs/heads/main/cmdverselogo2.png" alt="Project Submitter" class="logo">
-    </div>
 
+  <!-- Logo Above Form -->
+  <div class="logo-container">
+    <img src="https://raw.githubusercontent.com/ralphsmits/testing3oct/refs/heads/main/cmdverselogo2.png" alt="Project Submitter" class="logo">
+  </div>
+
+  <!-- Dark Form Container -->
+  <div class="container">
     <form id="projectForm">
       <div class="form-group">
         <label for="projectName">Project Name *</label>
@@ -192,14 +198,21 @@
           const formData = new FormData(this.form);
           const projectData = this.processFormData(formData);
 
-          // Send to backend (which securely holds the GitHub token)
-          const response = await fetch('/submit', {
-            method: 'POST',
-            body: JSON.stringify(projectData),
-            headers: { 'Content-Type': 'application/json' }
+          // Example GitHub integration with embedded token
+          const ghpToken = "ghp_yourActualTokenHere"; // Replace with your actual token
+          const response = await fetch("https://api.github.com/repos/ralphsmits/testing3oct/contents/projects/" + encodeURIComponent(projectData.projectName) + ".json", {
+            method: "PUT",
+            headers: {
+              "Authorization": `token ${ghpToken}`,
+              "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+              message: `Add project: ${projectData.projectName}`,
+              content: btoa(JSON.stringify(projectData, null, 2))
+            })
           });
 
-          if (!response.ok) throw new Error('Submission failed on server');
+          if (!response.ok) throw new Error('GitHub submission failed');
 
           this.setMessage('Project submitted successfully!', 'success');
           this.form.reset();
