--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <small>PNG or JPG, max 2MB</small>
       </div>
 
-      <button type="submit" id="submitBtn">Create Project</button>
+      <button type="submit" id="submitBtn">Submit Project</button>
     </form>
 
     <div id="message" class="message"></div>
