--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       height: 100%;
       object-fit: cover; /* Fill screen without stretching */
     }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       line-height: 1.6;
@@ -75,6 +76,13 @@
       font-size: 14px;
       background: #1f1f1f;
       color: #fff;
+    }
+
+    /* Prevent textarea from resizing beyond container */
+    textarea {
+      resize: vertical; /* allow only vertical resizing */
+      max-width: 100%;
+      box-sizing: border-box;
     }
 
     input:focus, textarea:focus, select:focus {
