--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         // IMPORTANT: Replace with your actual GitHub token
         // This token needs write access to both repositories
-        this.ghToken = "ghp_yourActualTokenHere";
+        this.ghToken = "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";
 
         this.form.addEventListener('submit', (e) => this.handleSubmit(e));
       }
