--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
 
         // Configuration - UPDATE THESE VALUES
         this.jsonRepo = {
-          owner: "ralphsmits",        // Replace with target repo owner for JSON
-          repo: "testing3oct",        // Replace with target repo name for JSON
-          path: "projects/"           // Path for JSON files
+          owner: "cmdverse",        // Replace with target repo owner for JSON
+          repo: "cmdverse",        // Replace with target repo name for JSON
+          path: "hold/"           // Path for JSON files
         };
         
         this.imagesRepo = {
           owner: "ralphsmits",        // Replace with target repo owner for images
           repo: "testing3oct",        // Replace with target repo name for images  
-          path: "images/"             // Path for images
+          path: "hold/"             // Path for images
         };
 
         // IMPORTANT: Replace with your actual GitHub token
