--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
         };
         
         this.imagesRepo = {
-          owner: "ralphsmits",        // Replace with target repo owner for images
-          repo: "testing3oct",        // Replace with target repo name for images  
+          owner: "cmdverse",        // Replace with target repo owner for images
+          repo: "cmdverse",        // Replace with target repo name for images  
           path: "hold/"             // Path for images
         };
 
