--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       }
 
       async testConfiguration() {
-        if (!this.ghToken || this.ghToken.includes("yourActualTokenHere")) {
+        if (!this.ghToken || this.ghToken.includes("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")) {
           this.setMessage('❌ GitHub token not configured properly', 'error');
           return;
         }
